k8s_deploy/chart_server.yaml
---
# kubectl -n njord autoscale deployment njord-chart-dep --cpu-percent=50 --min=1 --max=2
---
apiVersion: v1
kind: Service
metadata:
  name: njord-chart-svc
  namespace: njord
spec:
  ports:
    - name: http
      port: 80
      targetPort: 80
  selector:
    app: njord-chart-svc
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: njord-chart-dep
  namespace: njord
spec:
  selector:
    matchLabels:
      app: njord-chart-svc
  template:
    metadata:
      labels:
        app: njord-chart-svc
    spec:
      imagePullSecrets:
        - name: ghreg
      containers:
        - image: ghcr.io/manimaul/njord-chart-server:latest
          imagePullPolicy: Always
          name: njord-chart-svc
          ports:
            - containerPort: 80
              name: http
          resources:
            limits:
              cpu: "1.0"
              memory: "1G"
            requests:
              cpu: 750m
              memory: "1G"
          volumeMounts:
            - name: njord-config-vol
              mountPath: /etc/chart_server
              readOnly: true
      volumes:
        - name: njord-config-vol
          configMap:
            name: njord-config
---
apiVersion: v1
kind: Service
metadata:
  name: jmx-njord
  namespace: njord
spec:
  selector:
    app: jmx-njord
  ports:
  - name: jmx
    protocol: TCP
    port: 5000
    targetPort: 5000
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: njord-ingress
  namespace: njord
spec:
  ingressClassName: haproxy
  rules:
    - host: openenc.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: njord-chart-svc
                port:
                  number: 80
    - host: www.openenc.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: njord-chart-svc
                port:
                  number: 80
  tls:
    - hosts:
        - openenc.com
        - www.openenc.com
      secretName: njord-cert
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: memcached
  namespace: njord
spec:
  replicas: 1
  selector:
    matchLabels:
      run: memcached
  revisionHistoryLimit: 2
  template:
    metadata:
      labels:
        run: memcached
    spec:
      containers:
        - name: memcached
          image: memcached:1.6.37
          ports:
            - containerPort: 11211
---
apiVersion: v1
kind: Service
metadata:
  namespace: njord
  labels:
    run: memcached
  name: memcached
spec:
  clusterIP: None  # Headless service
  ports:
    - port: 11211
      protocol: TCP
      targetPort: 11211
  selector:
    run: memcached
